Добавил основоное окно с упражнениями, переход к ниму

--- a/MyTraining/InPutWindow.xaml
+++ b/MyTraining/InPutWindow.xaml
@@ -113,7 +113,7 @@
                 Background="#FFFF6C00"
                 Content="Вход"
                 Foreground="White"
-                Cursor="Hand"
+                Cursor="Hand" Click="Button_Click"
                 ></Button>
             </StackPanel>
 
