--- a/MyTraining/MainWindow.xaml
+++ b/MyTraining/MainWindow.xaml
@@ -6,6 +6,6 @@
         xmlns:local="clr-namespace:MyTraining"
         mc:Ignorable="d"
         Title="Моя тренировка"  Height="450" Width="800" Icon="Icon/training.png" Background="DarkSalmon" ResizeMode="NoResize">
-    <Frame Name="MainFrame" Background="#FFEBEBEB" NavigationUIVisibility="Hidden"/>
+    <Frame Name="MainFrame" Background="DarkCyan" NavigationUIVisibility="Hidden" />
 
 </Window>
