--- a/MyTraining/ExercisesPage.xaml
+++ b/MyTraining/ExercisesPage.xaml
@@ -1,15 +1,15 @@
-﻿<Window x:Class="MyTraining.ExercisesWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MyTraining"
-        mc:Ignorable="d"
-        Foreground="AliceBlue"
-         Height="620" Width="1080"
-        Icon="Icon/training.png">
+﻿<Page x:Class="MyTraining.ExercisesPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:MyTraining"
+      mc:Ignorable="d" 
+      d:DesignHeight="620" d:DesignWidth="1080"
+      Title="ExercisesPage"
+      Background="AliceBlue">
 
-    <Grid>
+    <Grid >
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="400"></ColumnDefinition>
@@ -24,12 +24,9 @@
                     <DropShadowEffect BlurRadius="2"/>
                 </TextBlock.Effect>
             </TextBlock>
-
-
-                <Button Height="110" Background="#FFFF872F" Click="Exercises_Click" >
-                <TextBlock  FontSize="36" FontWeight="Bold" FontFamily="Segoe Script">Упражнения</TextBlock>
+            <Button Height="110" Background="#FFEB6300" ClickMode="Hover">
+                <TextBlock FontSize="36" FontWeight="Bold" FontFamily="Segoe Script">Упражнения</TextBlock>
             </Button>
-
 
             <Button Height="110" Background="#FFFF872F">
                 <TextBlock FontSize="36" FontWeight="Bold" FontFamily="Segoe Script">Тренировки</TextBlock>
@@ -51,7 +48,6 @@
         <StackPanel Grid.Column="1" Height="60" VerticalAlignment="Top" Background="#FFFF872F"></StackPanel>
 
 
-        <Frame x:Name="MainFrame"></Frame>
-    </Grid>
 
-</Window>
+    </Grid>
+</Page>
