--- a/MyTraining/MainWindow.xaml
+++ b/MyTraining/MainWindow.xaml
@@ -6,7 +6,9 @@
         xmlns:local="clr-namespace:MyTraining"
         mc:Ignorable="d"
         Title="Моя тренировка"  Height="450" Width="800" Icon="Icon/training.png" Background="DarkSalmon" ResizeMode="NoResize"
-        x:Name="LoginWindow">
+        x:Name="LoginWindow"
+        WindowStartupLocation="CenterScreen">
+    
     <Frame Name="MainFrame"  NavigationUIVisibility="Hidden" />
-
-</Window>
+    
+    </Window>
