--- a/MyTraining/Views/LogInWindows/RegWindow.xaml
+++ b/MyTraining/Views/LogInWindows/RegWindow.xaml
@@ -38,7 +38,7 @@
                     <Ellipse.Fill>
                         <ImageBrush
                         Stretch="UniformToFill"
-                        ImageSource="Icon/training.png"></ImageBrush>
+                        ImageSource="/Icon/training.png"></ImageBrush>
                     </Ellipse.Fill>
 
                 </Ellipse>
@@ -61,7 +61,7 @@
                         </Grid.ColumnDefinitions>
 
                         <!--Иконка-->
-                        <Image Width="25" Height="25" Source="Icon/email.png"></Image>
+                        <Image Width="25" Height="25" Source="/Icon/email.png"></Image>
 
                         <!--Емаил текстбок-->
                         <TextBox
@@ -91,7 +91,7 @@
                         </Grid.ColumnDefinitions>
 
                         <!--Иконка-->
-                        <Image Width="25" Height="25" Source="Icon/password.png"></Image>
+                        <Image Width="25" Height="25" Source="/Icon/password.png"></Image>
 
                         <!--Емаил текстбок-->
                         <PasswordBox
@@ -119,7 +119,7 @@
                         </Grid.ColumnDefinitions>
 
                         <!--Иконка-->
-                        <Image Width="25" Height="25" Source="Icon/password.png"></Image>
+                        <Image Width="25" Height="25" Source="/Icon/password.png"></Image>
 
                         <!--Емаил текстбок-->
                         <PasswordBox
